--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,16 @@ body {
   font-size: 26px;
   text-decoration: none;
 }
+.test-button{
+  background-image: url(../images/envelope.svg);
+  width: 40px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.icon{
+  fill: currentColor;
+}
 .logo-dark > span {
   color: var(--full-dark);
 }
@@ -118,10 +128,17 @@ body {
 .hero {
   padding: 200px 0;
   background-color: var(--tertiary-dark-color);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url("../images/main/background-hero-image.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   color: var(--primary-white-color);
   text-align: center;
 }
 .hero-header {
+  max-width: 696px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 30px;
   color: var(--white-color);
   font-size: 44px;
@@ -221,6 +238,9 @@ section.team {
   width: calc((100% - 2 * 30px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+}
+.projects-list .item:hover{
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .projects-list .item:nth-child(3n) {
   margin-right: 0;
