--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ ul {
   color: inherit;
   text-decoration: none;
   font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container {
@@ -92,6 +93,18 @@ body {
 .info-bar .item + .item {
   margin-left: 50px;
 }
+.nav-bar .item{
+  position: relative;
+}
+.nav-bar .item .active::before{
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--primary-color);
+}
 .main-nav {
   display: flex;
   align-items: center;
@@ -107,9 +120,7 @@ body {
   color: var(--primary-color);
 }
 .link:hover,
-.link:focus,
-.contact:hover,
-.contact:focus {
+.link:focus {
   color: var(--primary-color);
 }
 .btn {
@@ -150,8 +161,10 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   font-weight: 700;
   line-height: 1.875;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero-button:hover {
+.hero-button:hover,
+.hero-button:focus {
   background-color: var(--primary-color-darker);
 }
 .features-list {
@@ -188,11 +201,24 @@ section.occupation {
   display: flex;
 }
 .occupation-item {
+  position: relative;
   width: calc((100% - 2 * 30px) / 3);
   margin-right: 30px;
 }
 .occupation-item:last-child {
   margin-right: 0;
+}
+.label-overlay{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  padding: 27px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+.label-header{
+  text-align: center;
+  color: var(--primary-white-color);
 }
 
 section.team {
@@ -236,8 +262,10 @@ section.team {
   width: calc((100% - 2 * 30px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.projects-list .item:hover{
+.projects-list .item:hover,
+.projects-list .item:focus{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .projects-list .item:nth-child(3n) {
@@ -265,7 +293,33 @@ section.team {
   font-size: 16px;
   line-height: 1.875;
 }
+.project-thumb{
+  position: relative;
+  overflow: hidden;
+}
+.project-overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+.project-description{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 0 27px;
+  color: var(--primary-white-color);
+  font-size: 18px;
+  line-height: 1.56;
+}
+.projects-list .item:hover .project-overlay{
+  transform: translateY(0%);
+}
 .filters-list {
   margin-bottom: 50px;
   display: flex;
@@ -280,6 +334,9 @@ section.team {
 .filters-list .filter-btn {
   padding: 6px 22px;
   background-color: var(--secondary-white-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter-btn.active,
 .filter-btn:hover,
@@ -344,8 +401,11 @@ section.team {
   border-radius: 50%;
   color: #AFB1B8;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-link:hover{
+.social-link:hover,
+.social-link:focus{
   color: var(--primary-white-color);
   background-color: var(--primary-color);
 }
@@ -365,13 +425,15 @@ section.team {
   border: solid 1px;
   border-radius: 4px;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients .icon{
   fill: currentColor;
   width: 106px;
   height: 60px;
 }
-.clients .logo-item:hover{
+.clients .logo-item:hover,
+.clients .logo-item:focus{
   color: var(--primary-color);
 }
 
@@ -387,6 +449,7 @@ section.team {
 .social .social-link{
   background-color: rgb(var(--primary-white-color-rgb), 0.1);
   color: white;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-wrapper{
   display: flex;
@@ -394,6 +457,29 @@ section.team {
 .address{
   margin-right: 70px;
 }
-.social .social-link:hover{
+.social .social-link:hover,
+.social .social-link:focus{
   background-color: var(--primary-color);
+}
+.backdrop{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 500px;
+  height: 500px;
+  border-radius: 10px;
+  background-color: var(--primary-white-color);
+}
+.backdrop.is-hidden{
+  opacity: 0;
+  pointer-events: none;
 }
