--- a/css/styles.css
+++ b/css/styles.css
@@ -468,18 +468,40 @@ section.team {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms ease-out;
 }
 .modal{
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
-  width: 500px;
-  height: 500px;
+  transform: translate(-50%,-50%) scale(1);
+  width: 528px;
+  height: 581px;
   border-radius: 10px;
   background-color: var(--primary-white-color);
+  transform-origin: center;
+  transition: transform 250ms ease-out;
+
 }
 .backdrop.is-hidden{
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
+}
+.backdrop.is-hidden .modal{
+  transform: translate(-50%,-50%) scale(0.9);
+}
+.modal .button-close{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  border: 1px solid rgba(0,0,0,0.1);
+  border-radius: 50%;
+  background: none;
+  background-image: url('/images/close-button.svg');
+  background-repeat: no-repeat;
+  background-position: center;
 }
