--- a/css/styles.css
+++ b/css/styles.css
@@ -581,14 +581,16 @@ section.team {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     background: none;
-    background-image: url("/images/close-button.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-close:hover {
-    color: var(--primary-color);
+.button-close .icon {
+    width: 18px;
+    height: 18px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close:hover .icon {
+    fill: var(--primary-color);
 }
 
 .form-field {
@@ -613,6 +615,7 @@ section.team {
 }
 
 .form-label {
+    display: inline-block;
     margin-bottom: 4px;
     color: rgb(var(--secondary-dark-color));
     font-size: 12px;
@@ -631,16 +634,17 @@ section.team {
     display: block;
     width: 18px;
     height: 18px;
-    background-color: var(--primary-dark-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus {
     outline: none;
     border-color: var(--primary-color);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus+.icon {
-    background-color: var(--primary-color);
+    fill: var(--primary-color);
 }
 
 .form-textarea::placeholder {
@@ -660,9 +664,66 @@ section.team {
     text-align: center;
 }
 
+.form-agree .form-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+}
+
+.form-agree .link {
+    text-decoration: underline;
+    color: var(--primary-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-agree .link:hover {
+    color: var(--primary-color-darker);
+}
+
 .submit-button {
     display: block;
     margin: 0 auto;
     margin-top: 30px;
     color: var(--primary-white-color);
+}
+
+.form-checkbox {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    clip: rect(0, 0, 0, 0);
+}
+
+.icon-checkbox {
+    position: relative;
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+    border: solid #000 2px;
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-checkbox .icon {
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    width: 16px;
+    height: 15px;
+    fill: var(--primary-white-color);
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-checkbox:checked+.icon-checkbox {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+}
+
+.form-checkbox:checked+.icon-checkbox>.icon {
+    opacity: 1;
 }
